# tech-challenge-01

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  estrutura.txt  main.py  prometheus.yml  pyproject.toml  requirements.txt
data/raw/Telecommunications_Industry/: ~$Telco_customer_churn.xlsx
docs/: MODEL_CARD.md  MONITORING.md  VIDEO.md
models/: encoder.joblib  logistic_regression.joblib  logistic_regression_baseline.joblib  mlp_churn_best.pt  mlp_model.pt  model_results.csv  scaler.joblib
notebooks/: 01_eda_telco_churn.ipynb  02_mlp_modeling.ipynb
src/: config.py
src/api/: app.py  inference.py  schemas.py
src/data/: load_data.py  preprocess.py
src/features/: build_features.py
src/middleware/: latency.py  logger.py
src/models/: evaluate.py  mlp.py  mlp_churn_best.pt  predict.py  train.py
src/pipelines/: training_pipeline.py
src/training/: train.py
src/utils/: logger.py  train_utils.py
tests/: conftest.py  test_api.py  test_inference.py  test_preprocess.py  test_schema.py
