[project]
name = "tc-01-previsao-churn"
version = "0.1.0"
description = "Tech Challenge 01 - ML Engineering FIAP"

authors = [
        {name = "Bruno", email = "seu@email.com"},
        {name = "Antonio", email = "antony0707jogos@gmail.com"},
        {name = "Paulo", email = "pauloh.krempel@gmail.com"},
        {name = "João", email = "joao.fuurlan@gmail.com"}
    ]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "mlflow>=2.7.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "ipykernel>=6.0.0"
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]