[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-01-previsao-churn"
version = "0.1.0"
description = "Projeto de previsão de churn"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "mlflow>=2.0",
  "joblib>=1.3",
  "pandera>=0.20",
  "python-json-logger>=2.0"
]

[project.optional-dependencies]
# Dependências de desenvolvimento (lint + testes)
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"