[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-01-previsao-churn"
version = "0.1.0"
description = "Projeto de previsão de churn"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "mlflow>=2.0",
  "joblib>=1.3",
  "pandera>=0.20",
  "python-json-logger>=2.0",
  "torch>=2.11.0",
  "seaborn>=0.13.2",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
  "prometheus-client>=0.25.0", 
  "prometheus-fastapi-instrumentator>=7.1.0",
  "starlette>=0.52.1"
]

[project.optional-dependencies]
# Dependências de desenvolvimento (lint + testes)
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
# Define o limite de linha como 100 conforme seu projeto
line-length = 100
# Versão alvo do Python
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: isort (organização de imports), W: Warnings
select = ["E", "F", "I", "W"]
# Ignora avisos de variáveis não usadas em arquivos de inicialização de pacotes
ignore = []

[tool.ruff.lint.per-file-ignores]
# Em arquivos __init__.py, é comum importar e não usar (F401)
"__init__.py" = ["F401"]
# Notebooks costumam ter linhas longas de outputs/tabelas que não queremos validar rigidamente
"*.ipynb" = ["E501"]

[tool.ruff.lint.isort]
# Garante que os imports fiquem organizados e limpos
combine-as-imports = true
force-single-line = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"